--- a/package.json
+++ b/package.json
@@ -1,10 +1,37 @@
 {
   "name": "oproxy",
   "version": "0.0.1",
-  "description": "Normalizes data according to a schema",
-  "main": "index.js",
+  "description": "Normalizes data . according to a schema",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
+  },
+  "peerDependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
   "repository": {
     "type": "git",
@@ -12,9 +39,33 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/jalalazimi/oproxy/issues"
   },
-  "homepage": "https://github.com/jalalazimi/oproxy#readme"
+  "homepage": "https://github.com/jalalazimi/oproxy#readme",
+  "module": "dist/oproxy.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/oproxy.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/oproxy.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "devDependencies": {
+    "@size-limit/preset-small-lib": "^7.0.8",
+    "@types/lodash": "^4.14.178",
+    "@types/lodash-es": "^4.17.6",
+    "husky": "^7.0.4",
+    "size-limit": "^7.0.8",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21"
+  }
 }
