--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oproxy",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Normalizes data . according to a schema",
   "license": "MIT",
   "main": "dist/index.js",
@@ -44,7 +44,8 @@
   },
   "homepage": "https://github.com/jalalazimi/oproxy#readme",
   "module": "dist/oproxy.esm.js",
-  "size-limit": [{
+  "size-limit": [
+    {
       "path": "dist/oproxy.cjs.production.min.js",
       "limit": "10 KB"
     },
