--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@types/lodash": "^4.14.178",
-    "@types/lodash-es": "^4.17.6",
+    "@types/uuid": "^8.3.4",
     "husky": "^7.0.4",
     "size-limit": "^7.0.8",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
